Increase icon size for ArcAppWindow

The current size (32dp) is too small and results in blurry shelf
icons.

Bug: 908968
Test: manual
Change-Id: I86303b66ff433995d12389c371dd5cf24eaf6515
Reviewed-on: https://chromium-review.googlesource.com/c/1352770
Commit-Queue: Vladislav Kaznacheev <kaznacheev@chromium.org>
Reviewed-by: Yury Khmel <khmel@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#612722}(cherry picked from commit 505961f20c116f38f8c28323a0f707b0a721a469 [formerly da4d0924d91f7cd13c21fed60170fe3f203b5c63])
Reviewed-on: https://chromium-review.googlesource.com/c/1370399
Reviewed-by: Vladislav Kaznacheev <kaznacheev@chromium.org>
Cr-Commit-Position: refs/branch-heads/3626@{#228}
Cr-Branched-From: 5302c6863bade38a5d283a7cce26a309d8e8e755 [formerly d897fb137fbaaa9355c0c93124cc048824eb1e65]-refs/heads/master@{#612437}
Former-commit-id: 66cf3835747c9b1a71852b04eb700bc1d20e59b5